quorum/test/tests/TypeChecker/Pass/ExpAssignIntegerNumObj.quorum
Number num
num:SetValue(7.5)
integer i = cast(integer, num)