quorum/test/tests/TypeChecker/Fail/ImpAssignNumObjIntObj.quorum
Integer int
int:setValue(5)
Number num = int